--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@ layout: default
 ---
 
 {% for post in site.posts %}
-
-<div class="posts">
-	<article>
-		<div class="date">
-			{{post.date | date: "%B %d, %Y"}}
+<!-- Wrapper -->
+  <div id="wrapper">
+     <!-- Main -->
+	<div id="main">
+	   <div class="inner">
+		<div class="posts">
+			<article>
+				<div class="date">
+					{{post.date | date: "%B %d, %Y"}}
+				</div>
+				<h3><a href="{{post.url}}">{{ post.title }}</a></h3>
+				<p>{{post.excerpt}}</p>
+				<ul class="actions">
+				<li><a href="{{post.url}}" class="button">More</a></li>
+				</ul>
+			</article>
 		</div>
-		<h3><a href="{{post.url}}">{{ post.title }}</a></h3>
-		<p>{{post.excerpt}}</p>
-		<ul class="actions">
-		<li><a href="{{post.url}}" class="button">More</a></li>
-		</ul>
-	</article>
+		</div>
+	  </div>
 </div>
 
 
