--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ layout: default
 <!-- Wrapper -->
   <div id="wrapper">
      <!-- Main -->
+	  {% include sidebar.html %}
 	<div id="main">
 	   <div class="inner">
 		<div class="posts">
