--- a/Physics_stuff.html
+++ b/Physics_stuff.html
@@ -1,13 +1,12 @@
 ---
 layout : default2
-title : Physics Stuff
 permalink : "/physics_stuff/"
 ---
 
 <h1> {{ page.title}} </h1>
 
-{% if site.tags[page.tags] == "physics" %}
-	{% for post in site.tags[page.tags] %}
+
+	{% for post in site.tags.physics %}
 		<div class="posts">
 			<article>
 				<div class="date">
@@ -21,4 +20,3 @@ permalink : "/physics_stuff/"
 			</article>
 		</div>
 	{% endfor %}
-{% endif %}
