--- a/Physics_stuff.html
+++ b/Physics_stuff.html
@@ -1,10 +1,11 @@
 ---
 layout : default
+title : Physics Stuff
 ---
 
 <h1> {{ page.title}} </h1>
 
-{% if site.tags[page.tag]=="physics" %}
+
 	{% for post in site.tags[page.tag]" %}
 		<div class="posts">
 			<article>
@@ -19,4 +20,3 @@ layout : default
 			</article>
 		</div>
 	{% endfor %}
-{% endif %}
