--- a/Physics_stuff.html
+++ b/Physics_stuff.html
@@ -6,7 +6,7 @@ title : Physics Stuff
 <h1> {{ page.title}} </h1>
 
 
-	{% for post in site.tags[page.tag]" %}
+	{% for post in site.tags[page.tag] %}
 		<div class="posts">
 			<article>
 				<div class="date">
