--- a/Physics_stuff.html
+++ b/Physics_stuff.html
@@ -1,22 +1,6 @@
 ---
 layout : default
-title : Physics Stuff
+title : "Physics Stuff"
+tag: physics
 ---
 
-<h1> {{ page.title}} </h1>
-
-
-	{% for post in site.tags[page.tag] %}
-		<div class="posts">
-			<article>
-				<div class="date">
-					{{post.date | date: "%B %d, %Y"}}
-				</div>
-				<h3><a href="{{post.url}}">{{ post.title }}</a></h3>
-				<p>{{post.excerpt}}</p>
-				<ul class="actions">
-				<li><a href="{{post.url}}" class="button">More</a></li>
-				</ul>
-			</article>
-		</div>
-	{% endfor %}
