--- a/oldpage.html
+++ b/oldpage.html
@@ -127,6 +127,9 @@ Programas en C:
       <li>
 			<a href="/assets/files/project_euler/c/PEproblem6.c"> PEproblem6.c </a> : Problema 6 .
 			</li>
+      <li>
+			<a href="/assets/files/project_euler/c/PEproblem7.c"> PEproblem7.c </a> : Problema 7 .
+			</li>
 		</li>
 	</u1>
 <hr>
