--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@ layout: default
 			{{post.date | date: "%B %d, %Y"}}
 		</div>
 		<h3><a href="{{post.url}}">{{ post.title }}</a></h3>
+		{% if post.image %}
+		<p>
+		  <figure class="image">
+		    <img src="{{ post.image }}" style="float:left;width:100px;height:100px;margin:0px 10px">
+		  </figure>
+			<p> {{post.excerpt}} </p>
+		</p>
+		{% else %}
 		<p>{{post.excerpt}}</p>
+		{% endif %}
 		<ul class="actions">
 		<li><a href="{{post.url}}" class="button">More</a></li>
 		</ul>
